feature news
add route /api/news, loaded data to DB
