# routes/news/news.js
@@ -1,0 +1,9 @@
+const express = require('express');
+
+const ctrl = require('../../controllers/news');
+
+const router = express.Router();
+
+router.get('/', ctrl.getList);
+
+module.exports = router;
